edited interface; fixed blank and whitespace prevention for add and edit

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,5 @@
 page-home {
-
+	.dark {
+		background: #222;
+	}
 }
